--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Sheetsee Chart Demo</title>
+    <title>Read dis</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
     <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic'>
-    <script type='text/javascript' src='../assets/js/sheetsee.js'></script>
+    <script type='text/javascript' src='../read-dis/assets/js/sheetsee.js'></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.3.4/tabletop.js'></script>
     <link rel='stylesheet' type='text/css' href='http://api.tiles.mapbox.com/mapbox.js/v1.0.0/mapbox.css'>
+
+
+    <link rel='stylesheet' type='text/css' href='../read-dis/assets/css/main.css'>
   </head>
 
   <style>
