Some more styling

--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
   <div class="container">
     <div class="row">
 
-      <h1>Read deez</h1>
-      <p>
-        <em><a href="https://docs.google.com/a/springest.com/spreadsheets/d/14gOabjR5CkvmMBvsmlhWsQcfIvePB7m9jbrAX8niHlk/edit#gid=0">Spreadsheet with data</a></em>
-      </p>
+      <div class="page-header">
+        <h1>Read deez <small>Interesting articles</small></h1>
+      </div>
 
-       <div class="col-md-12">
-         <div id="articlesTable"></div>
-       </div>
+      <div class="bs-callout bs-callout-success">
+        <h4>Collaborative list of good articles</h4>
+        <p>Contribute by updating the <a href="https://docs.google.com/a/springest.com/spreadsheets/d/14gOabjR5CkvmMBvsmlhWsQcfIvePB7m9jbrAX8niHlk/edit#gid=0">spreadsheet</a>.</p>
+      </div>
 
+      <div class="col-md-12">
+        <div id="articlesTable"></div>
+      </div>
 
     </div>
   </div>
