Changed input variable

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<tr class="info">
       <th class="tHeader">Article</th>
       <th class="tHeader">Author</th>
-      <th class="tHeader">Date Published</th>
+      <th class="tHeader">Year</th>
       <th class="tHeader">Company</th>
       <th class="tHeader">Tag</th>
       <th class="tHeader">Added by</th>
@@ -50,7 +50,7 @@
 	  	<tr class="spotRow">
         <td><a href="{{url}}" target="_blank">{{title}}</a></td>
         <td>{{author}}</td>
-        <td>{{datepublished}}</td>
+        <td>{{year}}</td>
         <td>{{company}}</td>
         <td>{{tag}}</td>
         <td>{{addedby}}</td>
