--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
 <body>
 
   <div class="top">
+    <div class="container">
+      <div class="row">
+        <div class="page-header">
+          <h1>Read deez <small>Interesting articles</small></h1>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="container">
     <div class="row">
-
-      <div class="page-header">
-        <h1>Read deez <small>Interesting articles</small></h1>
-      </div>
 
       <div class="bs-callout bs-callout-success">
         <h4>Collaborative list of good articles</h4>
