Small bit of header styling etc

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="row">
         <div class="page-header">
-          <h1>Read deez <small>Interesting articles</small></h1>
+          <h1>Read deez</h1>
         </div>
       </div>
     </div>
@@ -30,9 +30,11 @@
   <div class="container">
     <div class="row">
 
-      <div class="bs-callout bs-callout-success">
-        <h4>Collaborative list of good articles</h4>
-        <p>Contribute by updating the <a href="https://docs.google.com/a/springest.com/spreadsheets/d/14gOabjR5CkvmMBvsmlhWsQcfIvePB7m9jbrAX8niHlk/edit#gid=0">spreadsheet</a>.</p>
+      <div class="col-md-4">
+        <div class="bs-callout bs-callout-success">
+          <h4>Collaborative list of good articles</h4>
+          <p>Contribute by updating the <a href="https://docs.google.com/a/springest.com/spreadsheets/d/14gOabjR5CkvmMBvsmlhWsQcfIvePB7m9jbrAX8niHlk/edit#gid=0">spreadsheet</a>.</p>
+        </div>
       </div>
 
       <div class="col-md-12">
