--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
     <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic'>
-    <script type='text/javascript' src='../read-dis/assets/js/sheetsee.js'></script>
+    <script type='text/javascript' src='../read-deez/assets/js/sheetsee.js'></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.3.4/tabletop.js'></script>
     <link rel='stylesheet' type='text/css' href='http://api.tiles.mapbox.com/mapbox.js/v1.0.0/mapbox.css'>
 
 
-    <link rel='stylesheet' type='text/css' href='../read-dis/assets/css/main.css'>
+    <link rel='stylesheet' type='text/css' href='../read-deez/assets/css/main.css'>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   </head>
 
@@ -30,16 +30,20 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-md-4">
+      <div class="col-md-6">
         <div class="bs-callout bs-callout-success">
-          <h4>Collaborative list of good articles</h4>
-          <p>Contribute by updating the <a href="https://docs.google.com/a/springest.com/spreadsheets/d/14gOabjR5CkvmMBvsmlhWsQcfIvePB7m9jbrAX8niHlk/edit#gid=0">spreadsheet</a>.</p>
+          <h4>Collaborative list of good articles.</h4>
+          <p>Compiled by the people at <a href="http://www.springest.com">Springest</a>. Contribute by updating the <a href="https://docs.google.com/a/springest.com/spreadsheets/d/14gOabjR5CkvmMBvsmlhWsQcfIvePB7m9jbrAX8niHlk/edit#gid=0">spreadsheet</a>.</p>
         </div>
       </div>
 
       <div class="col-md-12">
         <div id="articlesTable"></div>
       </div>
+
+      <div class="col-md-12">
+        <p class="powered">Powered by <a href="https://github.com/jlord/sheetsee.js">sheetsee.js</a></p>
+      </div>      
 
     </div>
   </div>
