--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <link rel='stylesheet' type='text/css' href='../read-deez/assets/css/main.css'>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
+    <!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
+for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="http://cdn.mxpnl.com/libs/mixpanel-2.2.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
+mixpanel.init("94772956416c9046e77ae618731e66c5");</script><!-- end Mixpanel -->
+
   </head>
 
 <body>
@@ -59,7 +64,7 @@
     </tr>
 	  {{#rows}}
 	  	<tr class="spotRow">
-        <td><a href="{{url}}" target="_blank">{{title}}</a></td>
+        <td><a href="{{url}}" target="_blank" id="article">{{title}}</a></td>
         <td>{{year}}</td>
         <td>{{company}}</td>
         <td>{{tag}}</td>
@@ -68,6 +73,10 @@
 	  {{/rows}}
 	  </table>
 	</script>
+
+  <script type="text/javascript">
+    mixpanel.track("viewed Homepage")
+  </script>
 
   <script type="text/javascript">
    document.addEventListener('DOMContentLoaded', function() {
