--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Read dis</title>
+    <title>The One Metric</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
     <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
     <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic'>
@@ -14,10 +14,6 @@
     <link rel='stylesheet' type='text/css' href='../read-deez/assets/css/main.css'>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-    <!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
-for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="http://cdn.mxpnl.com/libs/mixpanel-2.2.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
-mixpanel.init("94772956416c9046e77ae618731e66c5");</script><!-- end Mixpanel -->
-
   </head>
 
 <body>
@@ -26,7 +22,7 @@ mixpanel.init("94772956416c9046e77ae618731e66c5");</script><!-- end Mixpanel -->
     <div class="container">
       <div class="row">
         <div class="page-header">
-          <h1>Read deezzzz</h1>
+          <h1>The One Metric. Or some of them.</h1>
         </div>
       </div>
     </div>
@@ -37,8 +33,8 @@ mixpanel.init("94772956416c9046e77ae618731e66c5");</script><!-- end Mixpanel -->
 
       <div class="col-md-6">
         <div class="bs-callout bs-callout-success">
-          <h4>Collaborative list of good articles.</h4>
-          <p>Compiled by the people at <a href="http://www.springest.com">Springest</a>. Contribute by updating the <a href="https://docs.google.com/a/springest.com/spreadsheets/d/14gOabjR5CkvmMBvsmlhWsQcfIvePB7m9jbrAX8niHlk/edit#gid=0">spreadsheet</a>.</p>
+          <h4>Blalblallbla.</h4>
+          <p>Source: <a href="https://docs.google.com/a/springest.com/spreadsheets/d/14gOabjR5CkvmMBvsmlhWsQcfIvePB7m9jbrAX8niHlk/edit#gid=0">spreadsheet</a>.</p>
         </div>
       </div>
 
